@@ -3,7 +3,7 @@
  *
  *   PPD custom option routines for CUPS.
  *
- *   Copyright 2007-2010 by Apple Inc.
+ *   Copyright 2007-2011 by Apple Inc.
  *   Copyright 1997-2006 by Easy Software Products, all rights reserved.
  *
  *   These coded instructions, statements, and computer programs are the
@@ -69,14 +69,19 @@ ppd_cparam_t *				/* O - Custom parameter or NULL */
 ppdFindCustomParam(ppd_coption_t *opt,	/* I - Custom option */
                    const char    *name)	/* I - Parameter name */
 {
-  ppd_cparam_t	key;			/* Custom parameter search key */
+  ppd_cparam_t	*param;			/* Current custom parameter */
 
 
   if (!opt)
     return (NULL);
 
-  strlcpy(key.name, name, sizeof(key.name));
-  return ((ppd_cparam_t *)cupsArrayFind(opt->params, &key));
+  for (param = (ppd_cparam_t *)cupsArrayFirst(opt->params);
+       param;
+       param = (ppd_cparam_t *)cupsArrayNext(opt->params))
+    if (!strcasecmp(param->name, name))
+      break;
+
+  return (param);
 }
 
 
