@@ -3,6 +3,8 @@ CHANGES-1.4.txt
 
 CHANGES IN CUPS V1.4.7
 
+	- The web interface did not allow setting of a default custom page size
+	  (STR #3707)
 	- The scheduler could crash if a browsed printer times out while a job
 	  is printing (STR #3754)
 	- The scheduler incorrectly mapped custom page sizes to standard sizes
